--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -18,3 +18,7 @@
 .item-md ion-icon[item-left] + .item-inner, .item-md ion-icon[item-left] + .item-input {
   margin-left: 8px;
 }
+
+.navBtnRight {
+  padding: 0px 7px!important;
+}
