--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,6 +15,11 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 
+$icoSize : 2.4rem;
+$regFontSize : 16px;
+$width : 100%;
+$errorColor : red;
+
 .item-md ion-icon[item-left] + .item-inner, .item-md ion-icon[item-left] + .item-input {
   margin-left: 8px;
 }
