--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,26 +1,53 @@
-.otpBtn {
-  top: 30px;
-  right: 5%;
-  left: 5%;
-  width: 90%;
-}
-
-.errInfo {
-  .item-inner {
-    border-bottom: transparent !important;
-    p {
-      color: red;
+.login-screen{
+    // background: $bgColor;
+    text-align: center;
+    img{
+        height: 150px;
+        margin-top: 10%;
     }
-  }
+    ion-item{
+        background: transparent;
+        ion-icon{
+            font-size: $icoSize;
+        }
+        .item-inner{
+            .text-input {
+                &::placeholder{
+                    font-size: $regFontSize;
+                    font-weight: normal;    
+                    letter-spacing: 0px;
+                }
+                padding-right: 0px;
+                letter-spacing: 2px;
+                font-size: $regFontSize + 2px;
+                font-weight: 600;
+                margin: 12px 8px 13px 0;
+                width: $width;
+            }
+        }  
+    }
+    .otpItem{
+        ion-label {
+            margin-left: 33%;
+        }
+        .item-inner{
+            .text-input {
+                letter-spacing: 6px;
+            }
+        }
+    }
+    
+    .errInfo {
+        .item-inner {
+            border-bottom: transparent !important;
+            p {
+                color: $errorColor;
+            }
+        }
+    }
+    .resendOtpBtn {
+        top: 40px;
+        position: relative;
+    }
 }
 
-.loginLbl {
-  p {
-    font-size: 16px;
-  }
-}
-
-.resendOtpBtn {
-  top: 40px;
-  position: relative;
-}
