Close complaint issue fixed

--- a/src/pages/complaint/view/viewComplaintModal.html
+++ b/src/pages/complaint/view/viewComplaintModal.html
@@ -18,4 +18,5 @@
     <p>Complaint Status: {{complaint.statusName}}</p>
     <p>Complaint Create: {{complaint.createdAt}}</p>
     <p>Complaint Against: {{complaint.againstCategoryName}}</p>
+    <p>Complaint Close: {{complaint.closedOn}}</p>
 </ion-content>
