--- a/src/pages/complaint/comment/comment.modal.scss
+++ b/src/pages/complaint/comment/comment.modal.scss
@@ -7,3 +7,30 @@
     position: absolute;
   }
 }
+.commentList {
+  .item-inner {
+    border-bottom: transparent !important;
+  }
+  .from-me {
+      position: relative;
+      padding: 10px 20px;
+      color: white;
+      background: #0B93F6;
+      border-radius: 25px;
+      float: right;
+      max-width: 255px;
+      word-wrap: break-word;
+      margin-bottom: 20px;
+      line-height: 24px;
+  }
+  .from-me:before {
+      content: "";
+      position: absolute;
+      bottom: -2px;
+      right: -7px;
+      height: 20px;
+      border-right: 20px solid #0B93F6;
+      border-bottom-left-radius: 16px 14px;
+      -webkit-transform: translate(0, -2px);
+  }
+}
