--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -25,6 +25,19 @@ $font-sm : 12px;
 $font-md : 16px;
 $font-lg : 18px;
 
+.no-padding-l {
+  padding-left: 0px !important;
+}
+.no-padding-r {
+  padding-right: 0px !important;
+}
+.no-padding-b {
+  padding-bottom: 0px !important;
+}
+.no-padding-t {
+  padding-top: 0px !important;
+}
+
 .item-md ion-icon[item-left] + .item-inner, .item-md ion-icon[item-left] + .item-input {
   margin-left: 8px;
 }
