Use <pre> for text formatting

--- a/src/pages/complaint/view/viewComplaintModal.html
+++ b/src/pages/complaint/view/viewComplaintModal.html
@@ -14,7 +14,7 @@
 
 <ion-content padding>
     <h2>Complaint Title: {{complaint.title}}</h2>
-    <h3>Complaint Description: {{complaint.description}}</h3>
+    <span>Complaint Description:</span><div> <pre>{{complaint.description}}</pre></div>
     <p>Complaint Status: {{complaint.statusName}}</p>
     <p>Complaint Create: {{complaint.createdAt}}</p>
     <p>Complaint Against: {{complaint.againstCategoryName}}</p>
