Complaint view done

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -24,6 +24,7 @@ $absolute : absolute;
 $font-sm : 12px;
 $font-md : 16px;
 $font-lg : 18px;
+$inherit : inherit;
 
 .no-padding-l {
   padding-left: 0px !important;
