--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -29,8 +29,10 @@ $colors: (
   light:      #f4f4f4,
   dark:       #222,
   cool:       #607D8B,
-  fab:        #3e9e3e
+  fab:        #3e9e3e,
+  header:     #387ef5
 );
+
 
 
 // App iOS Variables
