--- a/src/pages/homepage/homepage.scss
+++ b/src/pages/homepage/homepage.scss
@@ -1,19 +1,20 @@
-.home-tabs{
-  position: $absolute;
-  bottom: 0;
+.home-tabs{  
+  position: fixed;
+  bottom: 0px;
   button{
-    height: 90px;
-    width: 100px;
-    border-radius: 3px;
-    background-color: rgba(34, 34, 34, 0.72);
-    font-size: $font-sm;
-    label{
-      position: $absolute;
-      font-size: xx-large;
-      top: 10px;
-    }
-    span{
-      margin-top: $full-height - 65%;
-    }
+    height:90px;
+    background-color: rgba(6, 54, 134, 0.66);
   }
+  ion-icon {
+    font-size: 3.4rem;
+    margin-bottom: 15px;
+  }
+  span .mybtnlabel{
+    position: $absolute;
+    font-size: $font-sm;
+    font-weight: 600;
+    left: 0px;
+    bottom: 10px;
+    right: 0px;    
+  }  
 }
