Removed bug from login.scss

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -22,7 +22,7 @@
 }
 
 .item-label-stacked .text-input-ios, .item-label-floating .text-input-ios {
-    ..csOTPInput{
+    .csOTPInput{
           letter-spacing: 4px;
     font-size:25px;
     }
