--- a/src/pages/homepage/homepage.scss
+++ b/src/pages/homepage/homepage.scss
@@ -6,6 +6,7 @@ $cardText: #fff;
     font-size: 3.4rem;
     margin-bottom: 15px;
   }
+
   span .mybtnlabel{
     position: $absolute;
     font-size: $font-sm;
@@ -23,6 +24,7 @@ $cardText: #fff;
 }
 
 .colorCard{
+  margin: 1px;
   background-size:cover;
   text-align:center;
   width:100%;
@@ -45,7 +47,9 @@ $cardText: #fff;
   background-image: csBackgroundSvg('blueCard.svg');
 }
 
+
 .bullitinBoard{
+  padding:1px;
   ion-icon{
     color:$cardText;
   }
@@ -54,10 +58,18 @@ $cardText: #fff;
     margin-top:-8px;
   }
   .pin{
-    @extend .csCenter;
+    margin-left: 35%;
     margin-top:-15%;
     width:50px;
     height:50px;
+    background-repeat: no-repeat;
+  }
+  .pinYellow{
+    @extend .pin;
     background-image: csBackgroundSvg('clip2.svg');
+  }
+  .pinGreen{
+    @extend .pin;
+    background-image: csBackgroundSvg('clip2-green.svg');
   }
 }
