Menubar: updated with wooden theme

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,22 +1,25 @@
 <ion-menu [content]="content">
   <ion-header>
-    <ion-toolbar color="color1">
-      <ion-title>Menu</ion-title>
-    </ion-toolbar>
+    <ion-item class="csHeader">
+      <ion-avatar item-left>
+        <img src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/male3-512.png">
+      </ion-avatar>
+      {{name}}
+    </ion-item>
   </ion-header>
 
   <ion-content class="csBlueColor">
     <ion-list>
-      <button class="textBlack" menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+      <button class="csStrip dashButtonMargin" color="transparent" menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
         <ion-icon item-left [name]="p.icon"></ion-icon>
         {{p.title}}
       </button>
     </ion-list>
     <ion-list>
-      <ion-list-header class="csBlueColor">
+      <ion-list-header class="csLightText " color="transparent">
         Account
       </ion-list-header>
-      <button class="textBlack" ion-item menuClose *ngFor="let p of account" (click)="openPage(p)">
+      <button class="csStrip" ion-item menuClose *ngFor="let p of account" (click)="openPage(p)">
         <ion-icon item-left [name]="p.icon"></ion-icon>
         {{p.title}}
       </button>
