--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -57,11 +57,26 @@ $inherit : inherit;
 
 
 /*Corner Stone THeme */
-.textBlack{
-  color: $csDark;
+.csLightText{
+  color:#fff;
+}
+
+.csStrip{
+    @extend .csFillBackground;
+    color: #794c10;
+    font-weight: bold !important;
+  background: csBackgroundSvg('dashStrip.svg');
 }
 
 .csBlueColor{
+  @extend .csFillBackground;
   color:#fff;
-  background:#00838f;
+  background: csBackgroundSvg('dashBoard.svg');
+  .item-ios[detail-push] .item-inner, button.item-ios:not([detail-none]) .item-inner, a.item-ios:not([detail-none]) .item-inner{
+    background-image: url(''); //To remove arrow from dashboard buttons
+  }
+}
+
+.dashButtonMargin{
+      margin-top: 6px;
 }
